--- a/GCMServer/src/main/resources/templates/Devices.html
+++ b/GCMServer/src/main/resources/templates/Devices.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8"></meta>
 <title>GCM testing tool</title>
 <title>GCM testing tool</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
@@ -27,11 +27,11 @@
 			<a class="navbar-brand" href="#">GCM testing tool</a>
 		</div>
 		<ul class="nav navbar-nav">
-			<li><a href="#" th:ref="@{/Notification/}">Downstream</a></li>
+			<li><a href="#" th:href="@{/Notification/}">Downstream</a></li>
 			<li><a href="#">Upstream</a></li>
 			<li><a href="#">Groups</a></li>
 			<li><a href="#">Topics</a></li>
-			<li class="active"><a href="#" th:ref="@{/deviceManagement/}">Devices</a></li>
+			<li class="active"><a href="#" th:href="@{/deviceManagement/}">Devices</a></li>
 			<li class="divider-vertical"></li>
 			<li><a href="#">Settings</a></li>
 		</ul>
@@ -42,24 +42,21 @@
 			<p>In this section you can manage the registration id of the
 				different devices you will use within this tool</p>
 			<h3>Add device</h3>
-			<form id="form_register_device" class="form-inline" role="form" action="#"
-				th:action="@{/deviceManagement/registerDevice}" th:object="${newDevice}"
-				method="post">
-				<div class="form-group required">
-					<label for="input_registration_id" class="control-label">registration_id</label>
-
-					<input type="text" class="form-control" id="input_registration_id"
-						placeholder="registration_id" th:field="*{name}"></input>
-
-				</div>
+			<form id="form_register_device" class="form-inline" role="form"
+				action="#" th:action="@{/deviceManagement/registerDevice}"
+				th:object="${newDevice}" method="post">
 				<div class="form-group required">
 					<label for="input_device_name" class="control-label">Device
-						name</label> <input type="text" class="form-control"
-						id="input_device_name" placeholder="device name"
-						th:field="*{registrationId}"></input>
-
+						name</label><input type="text" class="form-control" id="input_device_name"
+						placeholder="device name" required="" th:field="*{name}"></input>
+				</div>
+				<div class="form-group required">
+					<label for="input_registration_id" class="control-label">registration_id</label>
+					<input type="text" class="form-control" id="input_registration_id"
+						placeholder="registration_id" required="" th:field="*{registrationId}"></input>
 				</div>
 				<button type="submit" class="btn btn-default">Send</button>
+				<button type="reset" class="btn btn-default">Clear</button>
 
 			</form>
 			<h3>Devices</h3>
@@ -72,7 +69,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="${device : modelo.deviceList}" th:inline="text">
+					<tr th:each="device : ${modelo.deviceList}" th:inline="text">
 						<td>[[${device.name}]]</td>
 						<td>[[${device.registrationId}]]</td>
 						<td><a href="#"
