New structure for Java packages and package.info files deleted Device Controller, model and core classes developed Unit testing redy Changed button by input in forms views

--- a/GCMServer/src/main/resources/templates/Devices.html
+++ b/GCMServer/src/main/resources/templates/Devices.html
@@ -53,10 +53,11 @@
 				<div class="form-group required">
 					<label for="input_registration_id" class="control-label">registration_id</label>
 					<input type="text" class="form-control" id="input_registration_id"
-						placeholder="registration_id" required="" th:field="*{registrationId}"></input>
+						placeholder="registration_id" required=""
+						th:field="*{registrationId}"></input>
 				</div>
-				<button type="submit" class="btn btn-default">Send</button>
-				<button type="reset" class="btn btn-default">Clear</button>
+				<input type="submit" class="btn btn-default" value="Send"></input> <input
+					type="reset" class="btn btn-default" value="Clear"></input>
 
 			</form>
 			<h3>Devices</h3>
