--- a/GCMServer/src/main/resources/templates/Notifications.html
+++ b/GCMServer/src/main/resources/templates/Notifications.html
@@ -142,8 +142,8 @@
 							</div>
 							<div class="form-group">
 								<div class="col-lg-offset-6 col-lg-6">
-									<button type="submit" class="btn btn-default">Send</button>
-									<button type="reset" class="btn btn-default">Clear</button>
+									<input type="submit" class="btn btn-default" value="Send"></input>
+									<input type="reset" class="btn btn-default" value="Clear"></input>
 								</div>
 							</div>
 						</form>
@@ -262,8 +262,8 @@
 							</div>
 							<div class="form-group">
 								<div class="col-lg-offset-6 col-lg-6">
-									<button type="submit" class="btn btn-default">Send</button>
-									<button type="reset" class="btn btn-default">Clear</button>
+									<input type="submit" class="btn btn-default" value="Send"></input>
+									<input type="reset" class="btn btn-default" value="Clear"></input>
 								</div>
 							</div>
 						</form>
@@ -384,8 +384,8 @@
 							</div>
 							<div class="form-group">
 								<div class="col-lg-offset-6 col-lg-6">
-									<button type="submit" class="btn btn-default">Send</button>
-									<button type="reset" class="btn btn-default">Clear</button>
+									<input type="submit" class="btn btn-default" value="Send"></input>
+									<input type="reset" class="btn btn-default" value="Clear"></input>
 								</div>
 							</div>
 						</form>
@@ -507,8 +507,8 @@
 							</div>
 							<div class="form-group">
 								<div class="col-lg-offset-6 col-lg-6">
-									<button type="submit" class="btn btn-default">Send</button>
-									<button type="reset" class="btn btn-default">Clear</button>
+									<input type="submit" class="btn btn-default" value="Send"></input>
+									<input type="reset" class="btn btn-default" value="Clear"></input>
 								</div>
 							</div>
 						</form>
