Added printing of response and request to Notifications.html view. Added Message class to package model in order to hold the fields that compound a request. Added a method to Sender class to add fiedls to the request checking if fields are correctly filled and formated Updated toString() method in MessageViewModel class to print the target field. Renamed some variables, removed non used variables and added logic to build a Plain text message using the model class Message containing the info from MessageModelView class
Signed-off-by: Alberto García <garcia.estevez.alberto@gmail.com

--- a/GCMServer/src/main/resources/templates/Notifications.html
+++ b/GCMServer/src/main/resources/templates/Notifications.html
@@ -536,14 +536,14 @@
 						<h2>Request</h2>
 						<p>Final request sent to GCM server</p>
 						<textarea class="form-control" rows="20" id="input_request"
-							readonly="">aaaaaa</textarea>
+							readonly="" th:text="${modelo.request}">The Request</textarea>
 					</div>
 					<div role="tabpanel" class="tab-pane" id="response">
 						<h2>Response</h2>
 						<p>Response received from the server after delivery our
 							notifications</p>
 						<textarea class="form-control" rows="20" id="input_response"
-							readonly="">aaaaa</textarea>
+							readonly="" th:text="${modelo.response}">The Response</textarea>
 					</div>
 				</div>
 			</div>
